# structurelint

./: .gitignore  .golangci.yml  .structurelint.yml  AUDIT_FINDINGS.md  CONTRIBUTING.md  PHASE1_IMPLEMENTATION.md  README.md  ROADMAP.md  go.mod  go.sum  sonar-project.properties
.github/scripts/: codebase-review.sh
.github/workflows/: ai-codebase-review.yml  ci.yml  codebase-review.yml  codeql.yml  pr-agent.yml  quality.yml  release.yml  repomix.yml  structurelint.yml  test-action.yml
clone_detection/: plugin_server.py  pyproject.toml
cmd/structurelint/: graph.go  main.go  main_test.go
docs/: CLONE_DETECTION.md  ENHANCEMENTS.md  GETTING_STARTED.md  GITHUB_ACTION.md  GITHUB_WORKFLOWS.md  PRE_COMMIT.md
docs/architecture/: ADR-001-project-architecture.md  ADR-002-toolchain.md  ADR-003-quality-gates.md  ADR-004-testing-strategy.md  ADR-005-rule-engine-architecture.md
docs/plans/: 2026-05-18-ci-standardization.md
examples/github-workflows/: README.md
fuzz/: FuzzJSONOutput_test.go  FuzzLintRule_test.go  FuzzParse_test.go  README.md  fuzz_test.go  json_output_test.go  lint_rule_test.go  parse_test.go  parser_test.go
internal/autofix/: autofix_coverage_test.go  engine.go  engine_coverage_test.go  engine_test.go  file_location_fixer.go
internal/clones/detector/: detector.go  detector_test.go  reporter.go  reporter_test.go
internal/clones/parser/: normalizer_test.go
internal/clones/syntactic/: expander_test.go  hasher_test.go  index_test.go
internal/clones/types/: types_test.go
internal/config/: config.go  config_test.go  gitignore.go  rules.go
internal/graph/: graph_test.go
internal/graph/analysis/: cycles.go  cycles_test.go
internal/graph/export/: dot.go  dot_test.go  export_coverage_test.go  mermaid.go  mermaid_test.go
internal/init/: detector_coverage_test.go  presets.go  presets_test.go
internal/lang/: detector.go  detector_coverage_test.go
internal/linter/: factory.go  factory_coverage_test.go  factory_test.go  linter.go  linter_test.go  pbt_test.go
internal/metrics/: analyzer_v2_test.go  cognitive_extra_test.go  multilang_analyzer_test.go
internal/output/: formatter.go  formatter_pbt_test.go  formatter_test.go
internal/parser/: directives.go  directives_test.go  exports.go  parser.go  parser_pbt_test.go  parser_test.go  parser_v2_nocgo_test.go
internal/parser/testdata/: example.java
internal/parser/treesitter/: exports_test.go  imports_test.go  metrics_test.go  parser_test.go
internal/plugin/: plugin_coverage2_test.go  plugin_coverage_test.go  rule_plugin_test.go  semantic_clone.go  semantic_clone_test.go
internal/ptest/: README.md  generators.go  generators_test.go  ptest_test.go
internal/ptest/testdata/: README.md
internal/rules/: ast_query_rule_test.go  composite_rule_test.go  external_rule.go  helpers.go  helpers_test.go  predicate_rule_test.go  registry_test.go  rule_test.go
internal/rules/ci/: base.go  base_test.go  detector.go  detector_test.go  file_reader.go  file_reader_test.go  (+6 more)
internal/scaffold/: generator.go  generator_test.go  templates_test.go
internal/tui/: model.go  model_test.go
internal/walker/: walker.go  walker_coverage_test.go  walker_pbt_test.go
tests/: test_clone_detection_basic.py
(+38 files in other folders)
