[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-clone-detection"
version = "0.1.0"
description = "Semantic code clone detection using GraphCodeBERT and FAISS"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "structurelint", email = "structurelint@example.com"}
]
keywords = ["code-clone", "semantic-analysis", "graphcodebert", "faiss", "tree-sitter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    # Deep Learning Framework
    "torch>=2.0.0",

    # Transformers for GraphCodeBERT
    "transformers>=4.30.0",

    # FAISS for vector similarity search
    # Note: For GPU support, install faiss-gpu instead via conda
    "faiss-cpu>=1.7.4",

    # Tree-sitter for multi-language parsing
    "tree-sitter>=0.20.0",
    "tree-sitter-python>=0.20.0",
    "tree-sitter-javascript>=0.20.0",
    "tree-sitter-java>=0.20.0",
    "tree-sitter-go>=0.20.0",
    "tree-sitter-cpp>=0.20.0",
    "tree-sitter-c-sharp>=0.20.0",

    # Data processing
    "numpy>=1.24.0",
    "pandas>=2.0.0",

    # Configuration
    "pyyaml>=6.0",
    "pydantic>=2.0.0",

    # CLI
    "click>=8.1.0",
    "rich>=13.0.0",
    "tqdm>=4.65.0",

    # Database for metadata storage
    "sqlalchemy>=2.0.0",

    # Utilities
    "pathspec>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
    "ruff>=0.0.270",
]

gpu = [
    # For GPU acceleration - install via: pip install faiss-gpu
    # Note: This typically requires conda installation
]

training = [
    # For fine-tuning GraphCodeBERT
    "datasets>=2.12.0",
    "accelerate>=0.20.0",
    "wandb>=0.15.0",
]

[project.scripts]
clone-detect = "clone_detection.cli.main:cli"

[project.urls]
Homepage = "https://github.com/structurelint/structurelint"
Repository = "https://github.com/structurelint/structurelint"
Issues = "https://github.com/structurelint/structurelint/issues"

[tool.setuptools]
packages = ["clone_detection"]

[tool.setuptools.package-data]
clone_detection = ["py.typed", "config/*.yaml"]

[tool.black]
line-length = 100
target-version = ['py312', 'py313']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=clone_detection --cov-report=term-missing"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
target-version = "py312"
